app/k8s-mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-mariadb-service
spec:
  selector:
    app: my-mariadb
  ports:
    - name: mariadb-prot
      protocol: TCP
      port: 3306
      targetPort: 3306
