app/memcached-deployment-and-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcache-deployment
  labels:
    app: memcache-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-memcached
  template:
    metadata:
      labels:
        app: my-memcached
    spec:
      containers:
        - name: my-memcached
          image: memcached:alpine
          ports:
            - containerPort: 11211

---
# Memcached Headless Service
kind: Service
apiVersion: v1
metadata:
  name: my-memcached-service
spec:
  # Headless service (i.e., no ip is assigned)
  clusterIP: None
  selector:
    app: my-memcached
